:bug: Fix layout height on mobile browsers (#2)

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,7 +9,8 @@
 }
 
 body {
-  height: 100%;
+  height: 100vh; // fallback
+  height: var(--app-height, 100vh);
   background-color: var(--color-primary);
   color: var(--color-secondary);
 }
